--- a/pandas_quiz.ipynb
+++ b/pandas_quiz.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -176,7 +176,7 @@
        "72254   20180911  CS018205000001  P071401005         1    1100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -346,7 +346,7 @@
        "7039   6-20100510-1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -387,7 +387,7 @@
        "104681"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -426,7 +426,7 @@
        "8307"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -495,7 +495,7 @@
        "Name: amount, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -702,7 +702,7 @@
        "6  B-20100609-B  3122.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -826,7 +826,7 @@
        "4  CS001215000145       2017-06-05"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -884,23 +884,82 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_x</th>\n",
+       "      <th>amount_y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CS001113000004</th>\n",
+       "      <td>1298</td>\n",
+       "      <td>3.113275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CS001114000005</th>\n",
+       "      <td>626</td>\n",
+       "      <td>2.796574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CS001115000010</th>\n",
+       "      <td>3044</td>\n",
+       "      <td>3.483445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CS001205000004</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>3.298416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CS001205000006</th>\n",
+       "      <td>3337</td>\n",
+       "      <td>3.523356</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "customer_id\n",
-       "CS001113000004    1298\n",
-       "CS001114000005     626\n",
-       "CS001115000010    3044\n",
-       "CS001205000004    1988\n",
-       "CS001205000006    3337\n",
-       "Name: amount, dtype: int64"
+       "                amount_x  amount_y\n",
+       "customer_id                       \n",
+       "CS001113000004      1298  3.113275\n",
+       "CS001114000005       626  2.796574\n",
+       "CS001115000010      3044  3.483445\n",
+       "CS001205000004      1988  3.298416\n",
+       "CS001205000006      3337  3.523356"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_receipt_grouped.head()\n"
+    "log_amount=np.log10(df_receipt_grouped)\n",
+    "pd.merge(df_receipt_grouped,log_amount,on='customer_id',how='left').head()\n"
    ]
   },
   {
